# routes/api.php
@@ -19,7 +19,7 @@ Route::prefix('monteiro.daisa/v1')->middleware('logging')->group(function () {
     // Comptes
     Route::get('comptes', [CompteController::class, 'index']);
     Route::get('clients/{clientId}/comptes', [CompteController::class, 'byClient']);
-    Route::get('comptes/{compteId}', [CompteController::class, 'show']);
+    Route::get('comptes/{numeroCompte}', [CompteController::class, 'show']);
 
     // Clients
     Route::get('clients', [ClientController::class, 'index']);
